--- a/src/components/MovieSection/MovieCard.scss
+++ b/src/components/MovieSection/MovieCard.scss
@@ -1,24 +1,24 @@
 @import '../../styles/vars';
 
 .movie-card {
-    border: $light-border;
-    width: 100%;
-    max-width: 20rem;
-    padding: 1rem;
+  border: $light-border;
+  width: 100%;
+  //max-width: 15rem;
+  padding: 1rem;
 
-    .image-container {
-        width: 100%;
-        display: inline-block;
-        overflow: hidden;
-        position: relative;
-        border-radius: 0.5rem 0.5rem 0 0;
-    
-        .img {
-          display: block;
-          position: relative;
-          width: 100%;
-          height: auto;
-          object-fit: cover;
-        }
+  .image-container {
+    width: 100%;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    border-radius: 0.5rem 0.5rem 0 0;
+
+    .img {
+      display: block;
+      position: relative;
+      width: 100%;
+      height: auto;
+      object-fit: cover;
     }
+  }
 }
