--- a/src/components/MovieSection/MovieCard.scss
+++ b/src/components/MovieSection/MovieCard.scss
@@ -3,21 +3,21 @@
 .movie-card {
   border: $light-border;
   width: 100%;
-  //max-width: 15rem;
   padding: 1rem;
 
-  .image-container {
+  .poster-container {
     width: 100%;
+    height: 28rem;
     display: inline-block;
     overflow: hidden;
     position: relative;
     border-radius: 0.5rem 0.5rem 0 0;
 
-    .img {
+    .poster {
       display: block;
       position: relative;
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
     }
   }
