search section design1

--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -4,5 +4,6 @@ section {
   border: $light-border;
   display: flex;
   flex-direction: column;
-  padding: 2rem 2rem;
+  gap: 1rem;
+  padding: 1rem;
 }
