--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 *,
 *:before,
 *:after {
@@ -14,8 +16,8 @@ html {
 
 body {
   margin: 0 auto;
-  background: black;
-  color: white;
+  background: $black;
+  color: $white;
 }
 
 p,
