--- a/src/components/SearchSection/SearchSection.scss
+++ b/src/components/SearchSection/SearchSection.scss
@@ -1,7 +1,7 @@
 .search-section {
     align-items: center;
 
-    .main-search {
+    .main-search, .advanced-search {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -10,6 +10,17 @@
 
         .search-title {
             font-size: clamp(1.5rem, 5vw, 3rem);
+        }
+
+        .advSearch-title {
+            font-size: clamp(1rem, 4vw, 1.5rem);
+        }
+
+        .dropdowns-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 1rem;
         }
     }
 }
