search section design

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 @import '../../styles/mixins';
 @import '../../styles/vars';
+@import '../../styles/colors.scss';
 
 header {
   height: 4rem;
@@ -12,7 +13,7 @@ header {
     @include content-style;
 
     h1 {
-      color: orangered;
+      color: $accent;
     }
   }
 }
