--- a/src/components/SearchSection/SearchSection.scss
+++ b/src/components/SearchSection/SearchSection.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakpoints.scss';
+
 .search-section {
     align-items: center;
 
@@ -22,5 +24,11 @@
             flex-wrap: wrap;
             gap: 1rem;
         }
+    }
+}
+
+@media (min-width: $lgInter) {
+    .search-section {
+        flex-direction: row;
     }
 }
