--- a/src/components/MovieSection/RankingDropdown.scss
+++ b/src/components/MovieSection/RankingDropdown.scss
@@ -10,7 +10,7 @@
     color: $accent;
   }
 
-  .advSearch-dropdown {
+  .ranking-dropdown {
     appearance: none;
     background: none;
     outline: none;
