--- a/src/components/MovieSection/MovieSection.scss
+++ b/src/components/MovieSection/MovieSection.scss
@@ -16,17 +16,18 @@
 .viewMode-options {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 
   p {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
 
   .view-mode-icon {
     font-size: 1.25rem;
     cursor: pointer;
 
-    &:hover, &.active {
+    &:hover,
+    &.active {
       color: $accent;
     }
   }
