--- a/src/components/MovieSection/RankingDropdown.scss
+++ b/src/components/MovieSection/RankingDropdown.scss
@@ -13,6 +13,7 @@
   .ranking-dropdown {
     appearance: none;
     background: none;
+    border: solid 1px rgba($white, .25);
     outline: none;
     height: 100%;
     width: 100%;
@@ -23,6 +24,10 @@
 
     option {
       color: $black;
+    }
+
+    &:focus {
+      border-color: $accent;
     }
 
     &:hover > .dropdown-icon {
