--- a/src/components/MovieSection/RankingDropdown.scss
+++ b/src/components/MovieSection/RankingDropdown.scss
@@ -13,7 +13,7 @@
   .ranking-dropdown {
     appearance: none;
     background: none;
-    border: solid 1px rgba($white, .25);
+    border: solid 1px rgba($white, 0.25);
     outline: none;
     height: 100%;
     width: 100%;
