--- a/src/components/MovieSection/GraphView.scss
+++ b/src/components/MovieSection/GraphView.scss
@@ -1,8 +1,8 @@
 @import '../../styles/colors.scss';
 
 .graph-view {
-    width: 100%;
-    background: $blackRelief;
-    border: solid 1px rgba($white, .1);
-    padding: 1rem;
+  width: 100%;
+  background: $blackRelief;
+  border: solid 1px rgba($white, 0.1);
+  padding: 1rem;
 }
