--- a/src/components/MovieSection/MovieCard.scss
+++ b/src/components/MovieSection/MovieCard.scss
@@ -1,9 +1,14 @@
 @import '../../styles/vars';
+@import '../../styles/colors';
 
 .movie-card {
+  background: $blackRelief;
   border: $light-border;
   width: 100%;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   .poster-container {
     width: 100%;
@@ -19,6 +24,28 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+
+  .infos-container {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+
+    .movie-title {
+      font-size: 1.25rem;
+      font-weight: 600;
+    }
+
+    .sub-wrapper {
+      display: flex;
+      gap: .5rem;
+
+      p {
+        font-size: .8rem;
+        opacity: .75;
+        font-weight: 200;
+      }
     }
   }
 }
