--- a/src/components/MovieSection/MovieCard.scss
+++ b/src/components/MovieSection/MovieCard.scss
@@ -9,6 +9,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  transition: border-color .3s ease;
+
+  &:hover {
+    border-color: $accent;
+  }
 
   .poster-container {
     width: 100%;
@@ -16,7 +21,7 @@
     display: inline-block;
     overflow: hidden;
     position: relative;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: 0.5rem;
 
     .poster {
       display: block;
@@ -24,6 +29,12 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      cursor: pointer;
+      transition: transform .6s ease;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 
