movies serched stocked in LocalStorage

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,7 +9,7 @@ footer {
   border-top: $light-border;
 
   .copyright {
-    font-size: .9rem;
+    font-size: 0.9rem;
     font-weight: 200;
   }
 }
