--- a/src/components/MovieSection/MovieCard.scss
+++ b/src/components/MovieSection/MovieCard.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  transition: border-color .3s ease;
+  transition: border-color 0.3s ease;
 
   &:hover {
     border-color: $accent;
@@ -30,7 +30,7 @@
       height: 100%;
       object-fit: cover;
       cursor: pointer;
-      transition: transform .6s ease;
+      transition: transform 0.6s ease;
 
       &:hover {
         transform: scale(1.05);
@@ -41,7 +41,7 @@
   .infos-container {
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 0.5rem;
 
     .movie-title {
       font-size: 1.25rem;
@@ -50,11 +50,11 @@
 
     .sub-wrapper {
       display: flex;
-      gap: .5rem;
+      gap: 0.5rem;
 
       p {
-        font-size: .8rem;
-        opacity: .75;
+        font-size: 0.8rem;
+        opacity: 0.75;
         font-weight: 200;
       }
     }
