--- a/src/components/Shared/Dropdown.scss
+++ b/src/components/Shared/Dropdown.scss
@@ -10,7 +10,7 @@
     color: $accent;
   }
 
-  .advSearch-dropdown {
+  .dropdown {
     appearance: none;
     background: none;
     outline: none;
