--- a/src/components/Shared/Dropdown.scss
+++ b/src/components/Shared/Dropdown.scss
@@ -13,6 +13,7 @@
   .dropdown {
     appearance: none;
     background: none;
+    border: solid 1px rgba($white, .25);
     outline: none;
     height: 100%;
     width: 100%;
