--- a/src/components/AnalyseSection/AnalysisMovieForm.scss
+++ b/src/components/AnalyseSection/AnalysisMovieForm.scss
@@ -14,9 +14,9 @@
     gap: 1rem;
 
     .field-container {
-        display: flex;
-        flex-direction: column;
-        gap: .5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
     }
 
     input {
