--- a/src/components/AnalyseSection/ResultsView.scss
+++ b/src/components/AnalyseSection/ResultsView.scss
@@ -8,4 +8,10 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+
+  .results-view-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
