--- a/src/components/AnalyseSection/SearchedCriteria.scss
+++ b/src/components/AnalyseSection/SearchedCriteria.scss
@@ -1,6 +1,6 @@
 .criteria-container {
-    display: flex;
-    gap: .5rem;
-    font-size: .75rem;
-    opacity: .75;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.75rem;
+  opacity: 0.75;
 }
