--- a/src/components/AnalyseSection/AnalysisMovieForm.scss
+++ b/src/components/AnalyseSection/AnalysisMovieForm.scss
@@ -21,8 +21,10 @@
 
     input {
       height: 2.5rem;
-      //background: none;
-      //border: solid 1px rgba($white, .25);
+      background: none;
+      border: solid 1px rgba($white, .25);
+      color: $white;
+      padding-left: 1rem;
     }
   }
 }
