--- a/src/components/AnalyseSection/AnalysisMovieForm.scss
+++ b/src/components/AnalyseSection/AnalysisMovieForm.scss
@@ -22,7 +22,7 @@
     input {
       height: 2.5rem;
       background: none;
-      border: solid 1px rgba($white, .25);
+      border: solid 1px rgba($white, 0.25);
       color: $white;
       padding-left: 1rem;
     }
