--- a/src/components/Shared/Button.scss
+++ b/src/components/Shared/Button.scss
@@ -9,7 +9,7 @@ button {
   font-size: 1rem;
   border-radius: 2rem;
   cursor: pointer;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 
   &:hover {
     background: $white;
